--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a:active {
       <a href="#resume" class="w3-button w3-black w3-block w3-hover-dark-grey">Resume</a>
     </div>
     <div class="w3-padding-64">
-      <a href="https://www.donatusajaezu.com" target="_blank">Website: donatusajaezu.com</a><br>
+      <a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a><br>
       <a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">Linkedin: donatusajaezu</a><br>
       <a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a><br>
       <a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a><br>
@@ -129,7 +129,7 @@ a:active {
 </div>
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
-  <p style="margin-bottom: -5px;">Powered by <a href="https://www.donatusajaezu.com" target="_blank">stb_bash</a></p>
+  <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">stb_bash</a></p>
   <a href="#" class="w3-button w3-black">Home</a>
 </footer>
 </body>
