--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@ a:active {
             <th>Where</th>
           </tr>
           <tr class="w3-white">
-            <td>2023-Present</td>
-            <td>Web Developer(Back end)</td>
-            <td>FREELANCE</td>
+            <td>2022-Present</td>
+            <td>Software Engineer</td>
+            <td>Solej Global</td>
           </tr>
           <tr>
-            <td>2019-2023</td>
-            <td>Mechanical/IT Engineer</td>
-            <td>Trinity Scientific Automobile(Eddy Motors)</td>
+            <td>2019-2022</td>
+            <td>Web Developer</td>
+            <td>OBIANEKS Investment Limited</td>
           </tr>
           <tr class="w3-white">
-            <td>2017-2019</td>
-            <td>Computer Research Analyst</td>
-            <td>OBIANEKS Investment Limited</td>
+            <td>2015-2016</td>
+            <td>Internship (Automotive)</td>
+            <td>Trinity Scientific Automobile(Eddy Motors)</td>
           </tr>
           <tr>
             <td>2012-2017</td>
