--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@ a:active {
       </div>
     </div>
   </div>
-  <div class="w3-half w3-teal w3-container" style="height:600px">
+  <div class="w3-half w3-teal w3-container" style="height:647px">
     <div id="contact" class="w3-padding-64 w3-padding-large">
       <h1>Skills</h1>
       <h3>Programming Languages</h3>
       <ul>
         <li>Python</li>
+        <li>Kotlin</li>
         <li>SQL</li>
         <li>Javascript</li>
         <li>C</li>
