--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a:active {
 
 <!-- Second Grid: Resume & contact -->
 <div class="w3-row" id="resume">
-  <div class="w3-half w3-indigo w3-container" style="min-height:600px">
+  <div class="w3-half w3-indigo w3-container" style="min-height:700px">
     <div class="w3-padding-64 w3-center">
       <h2>Education/Work Experience</h2>
       <p>A draft from my CV</p>
@@ -100,7 +100,7 @@ a:active {
       </div>
     </div>
   </div>
-  <div class="w3-half w3-teal w3-container" style="height:647px">
+  <div class="w3-half w3-teal w3-container" style="height:700px">
     <div id="contact" class="w3-padding-64 w3-padding-large">
       <h1>Skills</h1>
       <h3>Programming Languages</h3>
@@ -113,6 +113,7 @@ a:active {
       </ul>
       <h3>Graphics Design</h3>
       <ul>
+        <li>Html and CSS</li>
         <li>Corel Draw</li>
         <li>Photo Paint</li>
       </ul>
