--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@ a:active {
       <h1>DONATUS (OKECHUKWU) AJAEZU</h1>
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Expert in building and maintaining the mechanisms that process data and perform actions on websites, 
-          working on server-side software, focusing on databases(My-SQL), back-end logic, application programming 
-          interface (APIs), architecture, and servers, Create websites and applications using Django web frame 
-          work and web languages such as HTML, CSS, and JavaScript.
+        <p>Expert in building and maintaining the mechanisms that process data and 
+          perform actions on websites, working on server-side software, databases(SQL), 
+          back-end logic, application programming interface (APIs), architecture, and servers. 
+          Create websites and applications using Flask, Django web frame work and web languages such as HTML, 
+          CSS, and JavaScript. Experienced Android Developer proficient in Kotlin, 
+          with a strong track record of delivering high-quality mobile applications, 
+          strong understanding of the Android lifecycle and app performance optimization. 
+          My past years of experience and extensive educational success has shaped 
+          me into an employee with skill in agile project management, product development, 
+          optimization, design, and quality management.
           </p>
       </div>
     </div>
