--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@ a:active {
           Create websites and applications using Flask, Django web frame work and web languages such as HTML, 
           CSS, and JavaScript. Experienced Android Developer proficient in Kotlin, 
           with a strong track record of delivering high-quality mobile applications, 
-          strong understanding of the Android lifecycle and app performance optimization.
+          strong understanding of the Android lifecycle and app performance optimization. 
+          My past years of experience and extensive educational success have shaped me into an employee 
+          with skills in agile project management, product development, optimization, design, quality management, 
+          and DevOps. I am passionate about streamlining development processes, fostering collaboration between 
+          development and operations teams, and automating deployment pipelines to ensure efficient and reliable 
+          software delivery.
           </p>
       </div>
     </div>
