--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@ a:active {
       <a href="#resume" class="w3-button w3-black w3-block w3-hover-dark-grey">Resume</a>
     </div>
     <div class="w3-padding-64">
-      <a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a><br>
-      <a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">Linkedin: donatusajaezu</a><br>
-      <a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a><br>
-      <a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a><br>
-      <a href="https://www.replit.com/@DonatusAjaezu" target="_blank">Replit: @DonatusAjaezu</a><br>
+      <a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a><br><br>
+      <a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">Linkedin: donatusajaezu</a><br><br>
+      <a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a><br><br>
+      <a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a><br><br>
+      <a href="https://www.replit.com/@DonatusAjaezu" target="_blank">Replit: @DonatusAjaezu</a><br><br>
       <a Email: href="mailto:donatusajaezu@gmail.com">Email: donatusajaezu@gmail.com</a>
     </div>
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:900px">
     <div class="w3-padding-64 w3-center" id="about">
-      <h1>DONATUS (OKECHUKWU) AJAEZU</h1>
-      <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <h2>DONATUS (OKECHUKWU) AJAEZU</h2>
+      <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:40%">
       <div class="w3-left-align w3-padding-large">
         <p>Expert in building and maintaining the mechanisms that process data and 
           perform actions on websites, working on server-side software, databases(SQL), 
