--- a/index.html
+++ b/index.html
@@ -46,20 +46,16 @@ a:active {
   <div class="w3-half w3-blue-grey w3-container" style="height:900px">
     <div class="w3-padding-64 w3-center" id="about">
       <h2>DONATUS (OKECHUKWU) AJAEZU</h2>
-      <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:40%">
+      <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Expert in building and maintaining the mechanisms that process data and 
-          perform actions on websites, working on server-side software, databases(SQL), 
-          back-end logic, application programming interface (APIs), architecture, and servers. 
-          Create websites and applications using Flask, Django web frame work and web languages such as HTML, 
-          CSS, and JavaScript. Experienced Android Developer proficient in Kotlin, 
-          with a strong track record of delivering high-quality mobile applications, 
-          strong understanding of the Android lifecycle and app performance optimization. 
-          My past years of experience and extensive educational success have shaped me into an employee 
-          with skills in agile project management, product development, optimization, design, quality management, 
-          and DevOps. I am passionate about streamlining development processes, fostering collaboration between 
-          development and operations teams, and automating deployment pipelines to ensure efficient and reliable 
-          software delivery.
+        <p>I am an expert in building and maintaining data processing mechanisms and website functionalities, 
+          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, and server 
+          management. I create websites and applications using Flask, Django, and web technologies like HTML, CSS, 
+          and JavaScript. As an experienced Android Developer proficient in Kotlin, I have a strong track record 
+          of delivering high-quality mobile applications, optimizing app performance, and understanding the 
+          Android lifecycle. My background in agile project management, product development, optimization, 
+          design, and DevOps equips me with the skills to streamline development processes, foster collaboration 
+          between teams, and automate deployment pipelines for efficient and reliable software delivery.
           </p>
       </div>
     </div>
@@ -136,7 +132,7 @@ a:active {
 </div>
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
-  <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">stb_bash</a></p>
+  <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">bash</a></p>
   <a href="#" class="w3-button w3-black">Home</a>
 </footer>
 </body>
