--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@ a:active {
       <a style="margin-bottom: -2%;" href="#about" class="w3-button w3-black w3-block w3-hover-blue-grey">About</a>
       <a href="#resume" class="w3-button w3-black w3-block w3-hover-dark-grey">Resume</a>
     </div>
+
+<!--CV DOWNLOAD BUTTON-->
+<div class="w3-container w3-padding-16">
+  <a href="DonatusOkechukwuAjaezuCV.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="DonatusOkechukwuAjaezuCV.pdf">
+    <i data-feather="arrow-down" style="vertical-align: -0.35em;"></i>
+    <span class="w3-margin-left download-text">DOWNLOAD CV</span>
+  </a>
+</div>
+
     <div class="w3-padding-64">
       <a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a><br><br>
       <a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">Linkedin: donatusajaezu</a><br><br>
