--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ a:active {
     </div>
     <div class="w3-padding-64">
       <a style="margin-bottom: -2%;" href="#about" class="w3-button w3-black w3-block w3-hover-blue-grey">About</a>
-      <a href="#resume" class="w3-button w3-black w3-block w3-hover-dark-grey">Resume</a>
+      <a href="#resume" class="w3-button w3-black w3-block w3-hover-dark-grey">Details</a>
     </div>
 
 <!--CV DOWNLOAD BUTTON-->
