--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@ a:active {
             <th>Where</th>
           </tr>
           <tr class="w3-white">
-            <td>2022-Present</td>
+            <td>2023-Present</td>
+            <td>Software Engineer</td>
+            <td>Freelance</td>
+          </tr>
+          <tr>
+            <td>2022-2023</td>
             <td>Software Engineer</td>
             <td>Solej Global</td>
           </tr>
-          <tr>
+          <tr class="w3-white">
             <td>2019-2022</td>
             <td>Web Developer</td>
             <td>OBIANEKS Investment Limited</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2015-2016</td>
-            <td>Internship (Automotive)</td>
-            <td>Trinity Scientific Automobile(Eddy Motors)</td>
           </tr>
           <tr>
             <td>2012-2017</td>
@@ -143,6 +143,8 @@ a:active {
 <footer class="w3-container w3-black w3-padding-16">
   <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">bash</a></p>
   <a href="#" class="w3-button w3-black">Home</a>
+  <a class="icon-link w3-text-sand w3-hover-text-amber" href="#twitter" target="_blank">
+    <i data-feather="twitter"></i>
 </footer>
 </body>
 </html>
