--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ a:active {
             <td>Freelance</td>
           </tr>
           <tr>
-            <td>2022-2023</td>
+            <td>2022-Present</td>
             <td>Software Engineer</td>
             <td>Solej Global</td>
           </tr>
@@ -100,14 +100,14 @@ a:active {
             <td>OBIANEKS Investment Limited</td>
           </tr>
           <tr>
+            <td>2015-2016</td>
+            <td>Internship (Automotive)</td>
+            <td>Trinity Scientific Automobile(Eddy Motors)</td>
+          </tr>
+          <tr class="w3-white">
             <td>2012-2017</td>
             <td>Bachelor of Mechanical Engineering</td>
             <td>Chukwuemeka Odumegwu Ojukwu University</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2004-2010</td>
-            <td>West African Examination Council</td>
-            <td>Kabe College</td>
           </tr>
         </table>
       </div>
