--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ a:active {
           </tr>
           <tr class="w3-white">
             <td>2023-Present</td>
-            <td>Software Engineer</td>
+            <td>Python Engineer</td>
             <td>Freelance</td>
           </tr>
           <tr>
             <td>2022-Present</td>
-            <td>Software Engineer</td>
+            <td>Python Engineer</td>
             <td>Solej Global</td>
           </tr>
           <tr class="w3-white">
