--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ a:active {
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>I am an expert in building and maintaining data processing mechanisms and website functionalities, 
-          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, and server 
-          management. I create websites and applications using Flask, Django, and web technologies like HTML, CSS, 
-          and JavaScript. As an experienced Android Developer proficient in Kotlin, I have a strong track record 
-          of delivering high-quality mobile applications, optimizing app performance, and understanding the 
-          Android lifecycle. My background in agile project management, product development, optimization, 
-          design, and DevOps equips me with the skills to streamline development processes, foster collaboration 
-          between teams, and automate deployment pipelines for efficient and reliable software delivery.
+          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, and server management. 
+          I create websites and applications using Flask, Django, and web technologies like HTML, CSS, and JavaScript. 
+          My background in agile project management, product development, optimization, design, 
+          and DevOps equips me with the skills to streamline development processes, foster collaboration between teams, 
+          and automate deployment pipelines for efficient and reliable software delivery. 
+          My ability to integrate data analysis seamlessly into web development projects enables me to derive meaningful insights, 
+          enhance user experiences, and contribute to data-driven decision-making within the development lifecycle.
           </p>
       </div>
     </div>
