--- a/index.html
+++ b/index.html
@@ -58,13 +58,16 @@ a:active {
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>I am an expert in building and maintaining data processing mechanisms and website functionalities, 
-          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, and server management. 
-          I create websites and applications using Flask, Django, and web technologies like HTML, CSS, and JavaScript. 
-          My background in agile project management, product development, optimization, design, 
-          and DevOps equips me with the skills to streamline development processes, foster collaboration between teams, 
-          and automate deployment pipelines for efficient and reliable software delivery. 
-          My ability to integrate data analysis seamlessly into web development projects enables me to derive meaningful insights, 
-          enhance user experiences, and contribute to data-driven decision-making within the development lifecycle.
+          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, 
+          and server management. In addition to my strong foundation in web development using Flask, Django, 
+          and web technologies like HTML, CSS, and JavaScript, I possess advanced skills in data analysis. 
+          My experience includes conducting in-depth exploratory data analysis, 
+          utilizing Pandas for data manipulation, and employing statistical analysis and machine learning 
+          techniques for predictive modeling. I am proficient in Jupyter Notebooks for interactive data exploration 
+          and documentation. My ability to integrate data analysis seamlessly into web development projects 
+          enables me to derive meaningful insights, enhance user experiences, and contribute to data-driven 
+          decision-making within the development lifecycle.
+
           </p>
       </div>
     </div>
@@ -86,7 +89,7 @@ a:active {
           </tr>
           <tr class="w3-white">
             <td>2023-Present</td>
-            <td>Python Engineer</td>
+            <td>Data Engineer</td>
             <td>Freelance</td>
           </tr>
           <tr>
@@ -119,10 +122,11 @@ a:active {
       <h3>Programming Languages</h3>
       <ul>
         <li>Python</li>
+        <li>C++</li>
+        <li>C</li>
         <li>Kotlin</li>
         <li>SQL</li>
         <li>Javascript</li>
-        <li>C</li>
       </ul>
       <h3>Graphics Design</h3>
       <ul>
@@ -135,6 +139,7 @@ a:active {
         <li>Ms Word</li>
         <li>Ms Excel</li>
         <li>Power Point</li>
+        <li>Power BI</li>
       </ul>
     </div>
   </div>
