--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a:active {
       <a style="margin-bottom: -2%;" href="#about" class="w3-button w3-black w3-block w3-hover-blue-grey">About</a>
       <a href="#resume" class="w3-button w3-black w3-block w3-hover-dark-grey">Details</a>
     </div>
-
+    
 <!--CV DOWNLOAD BUTTON-->
 <div class="w3-container w3-padding-16">
   <a href="DonatusOkechukwuAjaezuCV.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="DonatusOkechukwuAjaezuCV.pdf">
@@ -94,7 +94,7 @@ a:active {
           </tr>
           <tr>
             <td>2022-Present</td>
-            <td>Python Engineer</td>
+            <td>Python/Data Engineer</td>
             <td>Solej Global</td>
           </tr>
           <tr class="w3-white">
