--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@ a:active {
       <h2>DONATUS (OKECHUKWU) AJAEZU</h2>
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>I am an expert in building and maintaining data processing mechanisms and website functionalities, 
-          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, 
-          and server management. In addition to my strong foundation in web development using Flask, Django, 
-          and web technologies like HTML, CSS, and JavaScript, I possess advanced skills in data analysis. 
+        <p>I possess advanced skills in data analysis. 
           My experience includes conducting in-depth exploratory data analysis, 
           utilizing Pandas for data manipulation, and employing statistical analysis and machine learning 
           techniques for predictive modeling. I am proficient in Jupyter Notebooks for interactive data exploration 
           and documentation. My ability to integrate data analysis seamlessly into web development projects 
           enables me to derive meaningful insights, enhance user experiences, and contribute to data-driven 
-          decision-making within the development lifecycle.
+          decision-making within the development lifecycle. I am an expert in building and maintaining data processing mechanisms and website functionalities, 
+          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, 
+          and server management. In addition to my strong foundation in web development using Flask, Django, 
+          and web technologies like HTML, CSS, and JavaScript.
 
           </p>
       </div>
