--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@ a:active {
       <h2>DONATUS (OKECHUKWU) AJAEZU</h2>
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>I possess advanced skills in data analysis. 
-          My experience includes conducting in-depth exploratory data analysis, 
-          utilizing Pandas for data manipulation, and employing statistical analysis and machine learning 
-          techniques for predictive modeling. I am proficient in Jupyter Notebooks for interactive data exploration 
-          and documentation. My ability to integrate data analysis seamlessly into web development projects 
+        <p>As an accomplished Data Engineer, I specialize in seamlessly integrating, processing, and analyzing diverse datasets 
+          sourced from internal databases, third-party APIs, and external data sets. My primary focus is on guaranteeing the quality 
+          and accuracy of data by employing a comprehensive set of tools and techniques. I am proficient in using Python, PySpark, JSON, 
+          PowerShell, Apache Spark, Kafka, Scala, Splunk, Elk Stack, and Terraform. I excel in data modeling and implement robust 
+          data warehousing solutions, ensuring that the data is transformed into a usable format for analysis and decision-making. 
+          My ability to integrate data analysis seamlessly into web development projects 
           enables me to derive meaningful insights, enhance user experiences, and contribute to data-driven 
           decision-making within the development lifecycle. I am an expert in building and maintaining data processing mechanisms and website functionalities, 
           specializing in server-side software, SQL databases, back-end logic, APIs, architecture, 
