--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@ a:active {
       <h2>DONATUS (OKECHUKWU) AJAEZU</h2>
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>As an accomplished Data Engineer, I specialize in seamlessly integrating, processing, and analyzing diverse datasets 
-          sourced from internal databases, third-party APIs, and external data sets. My primary focus is on guaranteeing the quality 
-          and accuracy of data by employing a comprehensive set of tools and techniques. I am proficient in using Python, PySpark, JSON, 
-          PowerShell, Apache Spark, Kafka, Scala, Splunk, Elk Stack, and Terraform. I excel in data modeling and implement robust 
-          data warehousing solutions, ensuring that the data is transformed into a usable format for analysis and decision-making. 
-          My ability to integrate data analysis seamlessly into web development projects 
-          enables me to derive meaningful insights, enhance user experiences, and contribute to data-driven 
-          decision-making within the development lifecycle. I am an expert in building and maintaining data processing mechanisms and website functionalities, 
-          specializing in server-side software, SQL databases, back-end logic, APIs, architecture, 
-          and server management. In addition to my strong foundation in web development using Flask, Django, 
-          and web technologies like HTML, CSS, and JavaScript.
+        <p>Versatile Data Engineer with a solid foundation in designing and implementing robust ETL processes, 
+          optimizing data workflows, and ensuring seamless integration across diverse platforms. 
+          Proficient in Python, SQL, and experienced in working with big data technologies. 
+          My expertise spans data modeling, warehousing, and deployment on leading cloud platforms. 
+          As a data advocate, I've successfully led projects translating business requirements into scalable, 
+          high-performance data solutions. Enthusiastic Data Analyst with a proven track record in 
+          leveraging advanced analytical skills to extract actionable insights from complex datasets. 
+          Proficient in Python, R, SQL, and data visualization tools, I specialize in transforming raw 
+          data into strategic business solutions. My domain knowledge spans finance, with hands-on 
+          experience optimizing financial processes and driving data-centric decision-making.
 
           </p>
       </div>
