--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a:active {
       <div class="w3-left-align w3-padding-large">
         <p>Versatile Data Engineer with a solid foundation in designing and implementing robust ETL processes, 
           optimizing data workflows, and ensuring seamless integration across diverse platforms. 
-          Proficient in Python, SQL, and experienced in working with big data technologies. 
+          Experienced in working with big data technologies. 
           My expertise spans data modeling, warehousing, and deployment on leading cloud platforms. 
           As a data advocate, I've successfully led projects translating business requirements into scalable, 
           high-performance data solutions. Enthusiastic Data Analyst with a proven track record in 
