--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ a:active {
           Experienced in working with big data technologies. 
           My expertise spans data modeling, warehousing, and deployment on leading cloud platforms. 
           As a data advocate, I've successfully led projects translating business requirements into scalable, 
-          high-performance data solutions. Enthusiastic Data Analyst with a proven track record in 
+          high-performance data solutions with a proven track record in 
           leveraging advanced analytical skills to extract actionable insights from complex datasets. 
           Proficient in Python, R, SQL, and data visualization tools, I specialize in transforming raw 
           data into strategic business solutions. My domain knowledge spans finance, with hands-on 
