--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a:active {
 </div>
 
     <div class="w3-padding-64">
-      <a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a><br><br>
+      <a href="https://stbbash.github.io" target="_blank">Website: donatusajaezu.info</a><br><br>
       <a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">Linkedin: donatusajaezu</a><br><br>
       <a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a><br><br>
       <a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a><br><br>
