--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ a:active {
 <div class="w3-row" id="resume">
   <div class="w3-half w3-indigo w3-container" style="min-height:700px">
     <div class="w3-padding-64 w3-center">
-      <h2>Education/Work Experience</h2>
-      <p>A draft from my CV</p>
+      <h2>Projects</h2>
+      <p>Code samples all on Github</p>
       <div class="w3-container w3-responsive">
         <table class="w3-table">
           <tr>
