--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ a:active {
       <div class="w3-container w3-responsive">
         <table class="w3-table">
           <tr>
-            <th>Year</th>
-            <th>Title</th>
-            <th>Where</th>
+            <th>S/N</th>
+            <th>Project Name</th>
+            <th>Link</th>
           </tr>
           <tr class="w3-white">
             <td>2023-Present</td>
