--- a/index.html
+++ b/index.html
@@ -85,30 +85,30 @@ a:active {
           <tr>
             <th>S/N</th>
             <th>Project Name</th>
-            <th>Link</th>
+            <th>Description</th>
           </tr>
           <tr class="w3-white">
-            <td>2023-Present</td>
-            <td>Data Engineer</td>
-            <td>Freelance</td>
+            <td>1</td>
+            <td><a href="https://github.com/stbbash/Python_Calculator.git" target="_blank">Python_Calculator</a></td>
+            <td>Building a Python Calculator using Kivy</td>
           </tr>
           <tr>
-            <td>2022-Present</td>
+            <td>2</td>
             <td>Python/Data Engineer</td>
             <td>Solej Global</td>
           </tr>
           <tr class="w3-white">
-            <td>2019-2022</td>
+            <td>3</td>
             <td>Web Developer</td>
             <td>OBIANEKS Investment Limited</td>
           </tr>
           <tr>
-            <td>2015-2016</td>
+            <td>4</td>
             <td>Internship (Automotive)</td>
             <td>Trinity Scientific Automobile(Eddy Motors)</td>
           </tr>
           <tr class="w3-white">
-            <td>2012-2017</td>
+            <td>5</td>
             <td>Bachelor of Mechanical Engineering</td>
             <td>Chukwuemeka Odumegwu Ojukwu University</td>
           </tr>
