--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@ a:active {
           </tr>
           <tr>
             <td>2</td>
-            <td>Python/Data Engineer</td>
-            <td>Solej Global</td>
+            <td><a href="https://github.com/stbbash/To_Do_Webapp.git" target="_blank">To_Do_Webapp</a></td>
+            <td>This is a To_Do Webapp implemented with Django Web framework</td>
           </tr>
           <tr class="w3-white">
             <td>3</td>
-            <td>Web Developer</td>
-            <td>OBIANEKS Investment Limited</td>
+            <td><a href="https://github.com/stbbash/Snake_Game.git" target="_blank">Snake_Game</a></td>
+            <td>Building a Snake Game using python libraries (Turtle, Random, Time)</td>
           </tr>
           <tr>
             <td>4</td>
