--- a/index.html
+++ b/index.html
@@ -104,13 +104,8 @@ a:active {
           </tr>
           <tr>
             <td>4</td>
-            <td>Internship (Automotive)</td>
-            <td>Trinity Scientific Automobile(Eddy Motors)</td>
-          </tr>
-          <tr class="w3-white">
-            <td>5</td>
-            <td>Bachelor of Mechanical Engineering</td>
-            <td>Chukwuemeka Odumegwu Ojukwu University</td>
+            <td><a href="https://github.com/stbbash/airflow_tutorial.git" target="_blank">Airflow_tutorial</a></td>
+            <td>Examples of Apache Airflow DAGs</td>
           </tr>
         </table>
       </div>
