--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@ a:active {
             <td><a href="https://github.com/stbbash/airflow_tutorial.git" target="_blank">Airflow_tutorial</a></td>
             <td>Examples of Apache Airflow DAGs</td>
           </tr>
+          <tr class="w3-white">
+            <td>5</td>
+            <td><a href="https://github.com/stbbash/CS50_FINAL_PROJECT.git" target="_blank">CS50 Final Project</a></td>
+            <td>Bash Dating Site! This Python script simulates a simple dating site experience through the command line</td>
+          </tr>
         </table>
       </div>
     </div>
