--- a/index.html
+++ b/index.html
@@ -119,14 +119,22 @@ a:active {
   <div class="w3-half w3-teal w3-container" style="height:1000px">
     <div id="contact" class="w3-padding-64 w3-padding-large">
       <h1>Skills</h1>
+      <h3>Data Engineering</h3>
+      <ul>
+        <li>Data Architecture</li>
+        <li>Orchestration</li>
+        <li>DataOps</li>
+        <li>Data Management</li>
+        <li>Data Analytics</li>
+      </ul>
       <h3>Programming Languages</h3>
       <ul>
         <li>Python</li>
-        <li>R</li>
         <li>C/C++</li>
-        <li>Kotlin</li>
+        <li>R</li>
         <li>SQL</li>
         <li>Javascript</li>
+        <li>Kotlin</li>
       </ul>
       <h3>Graphics Design</h3>
       <ul>
