--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@ a:active {
       <h2>DONATUS (OKECHUKWU) AJAEZU</h2>
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Versatile Data Engineer with a solid foundation in designing and implementing robust ETL processes, 
-          optimizing data workflows, and ensuring seamless integration across diverse platforms. 
-          Experienced in working with big data technologies. 
-          My expertise spans data modeling, warehousing, and deployment on leading cloud platforms. 
-          As a data advocate, I've successfully led projects translating business requirements into scalable, 
-          high-performance data solutions with a proven track record in 
-          leveraging advanced analytical skills to extract actionable insights from complex datasets. 
-          Proficient in Python, R, SQL, and data visualization tools, I specialize in transforming raw 
-          data into strategic business solutions. My domain knowledge spans finance, with hands-on 
-          experience optimizing financial processes and driving data-centric decision-making.
-
+        <p>I possess a robust and extensive background in Python programming, accumulating 
+          over 7 years of hands-on experience across diverse domains. My expertise spans both 
+          individual and collaborative efforts, where I have played a pivotal role in contributing 
+          to a variety of projects, showcasing my versatility and proficiency in harnessing the 
+          full capabilities of Python. Throughout my career, I have engaged in a spectrum of 
+          projects that illustrate the depth of my Python programming skills. Notable examples 
+          encompass Web Development, Graphical User Interfaces (GUIs), Data Engineering, Data Analysis 
+          and Visualization, as well as Automation and Scripting. I demonstrate proficiency across 
+          various Python libraries and frameworks, including but not limited to Django, Flask, 
+          PySide, Qt, NumPy, Pandas, Matplotlib, pytest, pyspark and many more.
           </p>
       </div>
     </div>
