--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a:active {
           full capabilities of Python. Throughout my career, I have engaged in a spectrum of 
           projects that illustrate the depth of my Python programming skills. Notable examples 
           encompass Web Development, Graphical User Interfaces (GUIs), Data Engineering, Data Analysis 
-          and Visualization, as well as Automation and Scripting. I demonstrate proficiency across 
+          and Visualization, as well as Web Scraping, Automation and Scripting. I demonstrate proficiency across 
           various Python libraries and frameworks, including but not limited to Django, Flask, 
           PySide, Qt, NumPy, Pandas, Matplotlib, pytest, pyspark and many more.
           </p>
