--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ a:active {
           to a variety of projects, showcasing my versatility and proficiency in harnessing the 
           full capabilities of Python. Throughout my career, I have engaged in a spectrum of 
           projects that illustrate the depth of my Python programming skills. Notable examples 
-          encompass Web Development, Graphical User Interfaces (GUIs), Data Engineering, Data Analysis 
+          encompass Web Development, Graphical User Interfaces (GUIs), Data Engineering, Analysis 
           and Visualization, as well as Web Scraping, Automation and Scripting. I demonstrate proficiency across 
-          various Python libraries and frameworks, including but not limited to Django, Flask, 
+          various Python libraries and frameworks, including but not limited to Django, 
           PySide, Qt, NumPy, Pandas, Matplotlib, pytest, pyspark and many more.
           </p>
       </div>
