--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@ a:hover {
 a:active {
   color: red;
 }
+
+.libutton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 7px;
+  text-align: center;
+  outline: none;
+  text-decoration: none !important;
+  color: #ffffff !important;
+  width: 200px;
+  height: 32px;
+  border-radius: 16px;
+  background-color: #0A66C2;
+  font-family: "SF Pro Text", Helvetica, sans-serif;
+}
 </style>
 </head>
 <body class="w3-content" style="max-width:1300px">
@@ -147,7 +163,9 @@ a:active {
 </div>
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
-  <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">bash</a></p>
+  <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">bash</a> 
+    <a class="libutton" href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=donatusajaezu" target="_blank">Follow on LinkedIn</a>
+  </p>
   <a href="#" class="w3-button w3-black">Home</a>
   <a class="icon-link w3-text-sand w3-hover-text-amber" href="#twitter" target="_blank">
     <i data-feather="twitter"></i>
