--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ a:active {
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
   <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">bash</a> 
-    <a class="libutton" href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=donatusajaezu" target="_blank">Follow on LinkedIn</a>
+    <a class="libutton" href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=donatusajaezu" target="_blank">Follow me on LinkedIn</a>
   </p>
   <br/>
   <a href="#" class="w3-button w3-black">Home</a>
