--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a:active {
           encompass Web Development, Graphical User Interfaces (GUIs), Data Engineering, Analysis 
           and Visualization, as well as Web Scraping, Automation and Scripting. I demonstrate proficiency across 
           various Python libraries and frameworks, including but not limited to Django, 
-          PySide, Qt, NumPy, Pandas, Matplotlib, pytest, pyspark and many more.
+          PySide6, Qt, NumPy, Pandas, Matplotlib, pytest, pyspark, airflow and many more.
           </p>
       </div>
     </div>
