--- a/index.html
+++ b/index.html
@@ -107,19 +107,23 @@ a:active {
           </tr>
           <tr>
             <td>2</td>
-            <td><a href="https://github.com/stbbash/To_Do_Webapp.git" target="_blank">To_Do_Webapp</a></td>
+            <td><a href="https://github.com/stbbash/School_Management_System.git" target="_blank">School Management System</a></td>
           </tr>
           <tr class="w3-white">
             <td>3</td>
-            <td><a href="https://github.com/stbbash/Snake_Game.git" target="_blank">Snake_Game</a></td>
+            <td><a href="https://github.com/stbbash/Snake_Game.git" target="_blank">Snake Game</a></td>
           </tr>
           <tr>
             <td>4</td>
-            <td><a href="https://github.com/stbbash/airflow_tutorial.git" target="_blank">Airflow_tutorial</a></td>
+            <td><a href="https://github.com/stbbash/airflow_tutorial.git" target="_blank">Airflow tutorial</a></td>
           </tr>
           <tr class="w3-white">
             <td>5</td>
-            <td><a href="https://github.com/stbbash/Python_Calculator.git" target="_blank">Python_Calculator</a></td>
+            <td><a href="https://github.com/stbbash/Python_Calculator.git" target="_blank">Python Calculator</a></td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td><a href="https://github.com/stbbash/To_Do_Webapp.git" target="_blank">To_Do Web Application with API</a></td>
           </tr>
         </table>
       </div>
