--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a:active {
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:1000px">
     <div class="w3-padding-64 w3-center" id="about">
-      <h2>DONATUS (OKECHUKWU) AJAEZU</h2>
+      <h2>DONATUS AJAEZU</h2>
       <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>I possess a robust and extensive background in Python programming, accumulating 
