--- a/index.html
+++ b/index.html
@@ -1,178 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donatus Ajaezu</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-  a:link {
-  color: #ffcc00;
-}
-a:visited {
-  color: green;
-}
-a:hover {
-  color: blue;
-  font-size: 110%;
-}
-a:active {
-  color: red;
-}
-
-.libutton {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 7px;
-    text-align: center;
-    outline: none;
-    text-decoration: none !important;
-    color: #ffffff !important;
-    width: 200px;
-    height: 32px;
-    border-radius: 16px;
-    background-color: #0A66C2;
-    font-family: "SF Pro Text", Helvetica, sans-serif;
-  }
-</style>
+  <title>Donatus Ajaezu</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="w3-content" style="max-width:1300px">
+<body>
 
-<!-- First Grid: Logo & About -->
-<div class="w3-row">
-  <div class="w3-half w3-black w3-container w3-center" style="height:1000px">
-    <div class="w3-padding-64">
-      <img src="logo.png" class="w3-margin w3-circle" alt="Person" style="width:20%">
-    </div>
-    <div class="w3-padding-64">
-      <a style="margin-bottom: -2%;" href="#about" class="w3-button w3-black w3-block w3-hover-blue-grey">About</a>
-      <a href="#resume" class="w3-button w3-black w3-block w3-hover-dark-grey">Details</a>
-    </div>
-    
-<!--CV DOWNLOAD BUTTON-->
-<div class="w3-container w3-padding-16">
-  <a href="DonatusOkechukwuAjaezuCV.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="DonatusOkechukwuAjaezuCV.pdf">
-    <i data-feather="arrow-down" style="vertical-align: -0.35em;"></i>
-    <span class="w3-margin-left download-text">DOWNLOAD CV</span>
-  </a>
-</div>
+  <h1>Donatus Ajaezu</h1>
 
-    <div class="w3-padding-64">
-      <a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a><br><br>
-      <a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">Linkedin: donatusajaezu</a><br><br>
-      <a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a><br><br>
-      <a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a><br><br>
-      <a Email: href="mailto:donatusajaezu@gmail.com">Email: donatusajaezu@gmail.com</a>
-    </div>
-  </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:1000px">
-    <div class="w3-padding-64 w3-center" id="about">
-      <h2>DONATUS AJAEZU</h2>
-      <img src="passport.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
-      <div class="w3-left-align w3-padding-large">
-        <p>I possess a robust and extensive background in Python programming, accumulating 
-          over 5 years of hands-on experience across diverse domains. My expertise spans both 
-          individual and collaborative efforts, where I have played a pivotal role in contributing 
-          to a variety of projects, showcasing my versatility and proficiency in harnessing the 
-          full capabilities of Python. Throughout my career, I have engaged in a spectrum of 
-          projects that illustrate the depth of my Python programming skills. Notable examples 
-          encompass Web Development, Graphical User Interfaces (GUIs), Data Engineering, Analysis 
-          and Visualization, as well as Web Scraping, Automation and Scripting. I demonstrate proficiency across 
-          various Python libraries and frameworks, including but not limited to Django, 
-          PySide6, tkinter, NumPy, Pandas, Matplotlib, pytest, pyspark, airflow and many more.
-          </p>
-      </div>
-    </div>
-  </div>
-</div>
+  <img src="logo.png" alt="Logo" width="150">
 
-<!-- Second Grid: Resume & contact -->
-<div class="w3-row" id="resume">
-  <div class="w3-half w3-indigo w3-container" style="min-height:1000px">
-    <div class="w3-padding-64 w3-center">
-      <h2>Projects</h2>
-      <p>Code samples all on Github</p>
-      <div class="w3-container w3-responsive">
-        <table class="w3-table">
-          <tr>
-            <th>S/N</th>
-            <th>Project Name</th>
-          </tr>
-          <tr class="w3-white">
-            <td>1</td>
-            <td><a href="https://github.com/stbbash/CS50_FINAL_PROJECT.git" target="_blank">CS50 Final Project</a></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td><a href="https://github.com/stbbash/School_Management_System.git" target="_blank">School Management System</a></td>
-          </tr>
-          <tr class="w3-white">
-            <td>3</td>
-            <td><a href="https://github.com/stbbash/Snake_Game.git" target="_blank">Snake Game</a></td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td><a href="https://github.com/stbbash/airflow_tutorial.git" target="_blank">Airflow tutorial</a></td>
-          </tr>
-          <tr class="w3-white">
-            <td>5</td>
-            <td><a href="https://github.com/stbbash/Python_Calculator.git" target="_blank">Python Calculator</a></td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td><a href="https://github.com/stbbash/To_Do_Webapp.git" target="_blank">To_Do Web Application with API</a></td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </div>
-  <div class="w3-half w3-teal w3-container" style="height:1000px">
-    <div id="contact" class="w3-padding-64 w3-padding-large">
-      <h1>Skills</h1>
-      <h3>Data Engineering</h3>
-      <ul>
-        <li>Data Architecture</li>
-        <li>Orchestration</li>
-        <li>DataOps</li>
-        <li>Data Management</li>
-        <li>Data Analytics</li>
-      </ul>
-      <h3>Programming Languages</h3>
-      <ul>
-        <li>Python</li>
-        <li>C/C++</li>
-        <li>R</li>
-        <li>SQL</li>
-        <li>Javascript</li>
-        <li>Kotlin</li>
-      </ul>
-      <h3>Graphics Design</h3>
-      <ul>
-        <li>Html and CSS</li>
-        <li>Corel Draw</li>
-        <li>Photo Paint</li>
-      </ul>
-      <h3>Microsoft Office</h3>
-      <ul>
-        <li>Ms Word</li>
-        <li>Ms Excel</li>
-        <li>Power Point</li>
-        <li>Power BI</li>
-      </ul>
-    </div>
-  </div>
-</div>
-<!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
-  <p style="margin-bottom: -5px;">Powered by <a href="https://stbbash.github.io" target="_blank">bash</a> 
-    <a class="libutton" href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=donatusajaezu" target="_blank">Follow me on LinkedIn</a>
+  <h2>Navigation</h2>
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#resume">Details</a></li>
+  </ul>
+
+  <p>
+    <a href="DonatusOkechukwuAjaezuCV.pdf" download="DonatusOkechukwuAjaezuCV.pdf">Download CV</a>
   </p>
-  <br/>
-  <a href="#" class="w3-button w3-black">Home</a>
-  <a class="icon-link w3-text-sand w3-hover-text-amber" href="#twitter" target="_blank">
-    <i data-feather="twitter"></i>
-</footer>
+
+  <h3>Links</h3>
+  <ul>
+    <li><a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a></li>
+    <li><a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">LinkedIn: donatusajaezu</a></li>
+    <li><a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a></li>
+    <li><a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a></li>
+    <li><a href="mailto:donatusajaezu@gmail.com">Email: donatusajaezu@gmail.com</a></li>
+  </ul>
+
+  <section id="about">
+    <h2>About</h2>
+    <img src="passport.jpg" alt="Donatus Ajaezu" width="250">
+    <p>
+      I’ve been in a committed relationship with Python for over 5 years now — and honestly, 
+      it’s going great. Together we’ve built web apps, wrangled data pipelines, tamed GUIs, 
+      and occasionally broken production (for educational purposes, of course). I’ve coded solo and in teams, 
+      surviving merge conflicts and mysterious bugs that only appear when your boss is watching. 
+      I’ve dabbled in everything from Django to PySide6, tinkered with NumPy and Pandas like a mad scientist, 
+      and even pretended to understand Airflow’s error logs. My toolkit includes automation scripts, web scrapers, 
+      dashboards that probably deserve design awards, and a few “temporary” hacks that somehow went to production. 
+      In short: I speak fluent Python, think in for-loops, and can debug faster than you can say “it works on 
+      my machine.”
+    </p>
+  </section>
+
+  <footer>
+    <p>Powered by <a href="https://stbbash.github.io" target="_blank">bash</a></p>
+    <p>
+      <a href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=donatusajaezu" target="_blank">
+        Follow me on LinkedIn
+      </a>
+    </p>
+    <p><a href="#">Home</a></p>
+  </footer>
+
 </body>
 </html>
