--- a/index.html
+++ b/index.html
@@ -8,18 +8,7 @@
 <body>
 
   <h1>Donatus Ajaezu</h1>
-
-  <h3>Links</h3>
-  <ul>
-    <li><a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a></li>
-    <li><a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">LinkedIn: donatusajaezu</a></li>
-    <li><a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a></li>
-    <li><a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a></li>
-    <li><a href="mailto:donatusajaezu@gmail.com">Email: donatusajaezu@gmail.com</a></li>
-  </ul>
-
-  <section id="about">
-    <h2>About</h2>
+  <section>
     <img src="passport.jpg" alt="Donatus Ajaezu" width="100">
     <p>
       I’ve been in a committed relationship with Python for over 5 years now — and honestly, 
@@ -33,6 +22,14 @@
       my machine.”
     </p>
   </section>
+  <h3>Links</h3>
+  <ul>
+    <li><a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a></li>
+    <li><a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">LinkedIn: donatusajaezu</a></li>
+    <li><a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a></li>
+    <li><a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a></li>
+    <li><a href="mailto:donatusajaezu@gmail.com">Email: donatusajaezu@gmail.com</a></li>
+  </ul>
 
 </body>
 </html>
