no more shalaye

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </section>
   <h3>Links</h3>
   <ul>
-    <li><a href="https://stbbash.github.io" target="_blank">Website: stbbash.github.io</a></li>
+    <li><a href="https://donatusajaezu.pages.dev" target="_blank">Website: https://donatusajaezu.pages.dev</a></li>
     <li><a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">LinkedIn: donatusajaezu</a></li>
     <li><a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a></li>
     <li><a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a></li>
