--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-  <h1>Donatus Ajaezu</h1><br/>
-  <h3>(BASH)</h3>
+  <h1>Donatus Ajaezu</h1>
+  <p>(BASH)</p>
   <section>
     <img src="passport.jpg" alt="Donatus Ajaezu" width="100">
     <p>
