--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 
-  <h1>Donatus Ajaezu</h1>
-  <p>(BASH)</p>
+  <h1>Donatus Ajaezu</h1><p>(bash)</p>
   <section>
     <img src="passport.jpg" alt="Donatus Ajaezu" width="100">
     <p>
