no more shalaye

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>Donatus Ajaezu</h1><p>(bash)</p>
+  <h1>Donatus Ajaezu <p>(bash)</p></h1>
   <section>
     <img src="passport.jpg" alt="Donatus Ajaezu" width="100">
     <p>
