no more shalaye

--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Donatus Ajaezu</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Portfolio of Donatus Ajaezu — Python developer, automation enthusiast, and proud survivor of mysterious bugs.">
+  <title>Donatus Ajaezu (bash)</title>
 </head>
 <body>
 
-  <h1>Donatus Ajaezu <p>(bash)</p></h1>
-  <section>
-    <img src="passport.jpg" alt="Donatus Ajaezu" width="100">
+  <header>
+    <h1>Donatus Ajaezu</h1>
+    <p>(bash)</p>
+  </header>
+
+  <section id="about">
+    <img src="passport.jpg" alt="Donatus Ajaezu" width="120">
     <p>
       I’ve been in a committed relationship with Python for over 5 years now — and honestly, 
       it’s going great. Together we’ve built web apps, wrangled data pipelines, tamed GUIs, 
-      and occasionally broken production (for educational purposes, of course). I’ve coded solo and in teams, 
-      surviving merge conflicts and mysterious bugs that only appear when your boss is watching. 
-      I’ve dabbled in everything from Django to PySide6, tinkered with NumPy and Pandas like a mad scientist, 
-      and even pretended to understand Airflow’s error logs. My toolkit includes automation scripts, web scrapers, 
-      dashboards that probably deserve design awards, and a few “temporary” hacks that somehow went to production. 
-      In short: I speak fluent Python, think in for-loops, and can debug faster than you can say “it works on 
-      my machine.”
+      and occasionally broken production (for educational purposes, of course).
+    </p>
+    <p>
+      I’ve coded solo and in teams, surviving merge conflicts and mysterious bugs that only 
+      appear when your boss is watching. I’ve dabbled in everything from Django to PySide6, 
+      tinkered with NumPy and Pandas like a mad scientist, and even pretended to understand 
+      Airflow’s error logs.
+    </p>
+    <p>
+      My toolkit includes automation scripts, web scrapers, dashboards that probably deserve 
+      design awards, and a few “temporary” hacks that somehow made it to production.
+      In short: I speak fluent Python, think in for-loops, and can debug faster than you can 
+      say “it works on my machine.”
     </p>
   </section>
-  <h3>Links</h3>
-  <ul>
-    <li><a href="https://donatusajaezu.pages.dev" target="_blank">Website: https://donatusajaezu.pages.dev</a></li>
-    <li><a href="https://www.linkedin.com/in/donatusajaezu" target="_blank">LinkedIn: donatusajaezu</a></li>
-    <li><a href="https://www.twitter.com/stb_bash" target="_blank">Twitter: stb_bash</a></li>
-    <li><a href="https://www.github.com/stbbash" target="_blank">Github: stbbash</a></li>
-    <li><a href="mailto:donatusajaezu@gmail.com">Email: donatusajaezu@gmail.com</a></li>
-  </ul>
+
+  <section id="links">
+    <h3>Links</h3>
+    <ul>
+      <li><a href="https://donatusajaezu.pages.dev" target="_blank" rel="noopener noreferrer">Website: donatusajaezu.pages.dev</a></li>
+      <li><a href="https://www.linkedin.com/in/donatusajaezu" target="_blank" rel="noopener noreferrer">LinkedIn: donatusajaezu</a></li>
+      <li><a href="https://www.twitter.com/stb_bash" target="_blank" rel="noopener noreferrer">Twitter: stb_bash</a></li>
+      <li><a href="https://www.github.com/stbbash" target="_blank" rel="noopener noreferrer">GitHub: stbbash</a></li>
+      <li><a href="mailto:donatusajaezu@gmail.com">Email: donatusajaezu@gmail.com</a></li>
+    </ul>
+  </section>
 
 </body>
 </html>
+
